Fix matrix problem

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button id="button-grayscale">Grayscale</button>
     <button id="button-box-blur">Box blur</button>
     <button id="button-gaussian-blur">Gaussian blur</button>
+    <button id="button-sharpen">Sharpen</button>
     <button id="button-sobel-operator">Sobel operator</button>
     <button id="button-laplacian-operator">Laplacian operator</button>
     <script src="js/kernel.js"></script>
