--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Image Processing</title>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
-    <button id="button-grayscale">Grayscale</button>
-    <button id="button-box-blur">Box blur</button>
-    <button id="button-gaussian-blur">Gaussian blur</button>
-    <button id="button-sharpen">Sharpen</button>
-    <button id="button-sobel-operator">Sobel operator</button>
-    <button id="button-laplacian-operator">Laplacian operator</button>
+    <main>
+      <div class="btn-container">
+        <button class="btn" id="button-grayscale">Grayscale</button>
+        <button class="btn" id="button-box-blur">Box blur</button>
+        <button class="btn" id="button-gaussian-blur">Gaussian blur</button>
+        <button class="btn" id="button-sharpen">Sharpen</button>
+        <button class="btn" id="button-sobel-operator">Sobel operator</button>
+        <button class="btn" id="button-laplacian-operator">
+          Laplacian operator
+        </button>
+        <button class="btn" id="button-median-filter">Median filter</button>
+        <button class="btn" id="button-merge">Merge</button>
+        <button class="btn btn-reset" id="button-reset">Reset</button>
+      </div>
+      <div class="canvas-container">
+        <canvas id="canvas"></canvas>
+      </div>
+    </main>
     <script src="js/kernel.js"></script>
   </body>
 </html>
