--- a/index.html
+++ b/index.html
@@ -20,37 +20,84 @@
             <div class="subsubbtn">
               <button class="btn">Gamma correction</button>
               <div class="subsubbtn-group">
+                <p class="txt txt-first" id="gamma-value">
+                  𝛾 = 1.00
+                </p>
                 <input
                   type="range"
                   id="slider-gamma"
-                  class="sldr sldr-first sldr-last"
+                  class="sldr"
+                  min="0.01"
+                  max="9.99"
+                  step="0.01"
+                  value="1.00"
                 />
+                <button class="btn btn-last" id="button-gamma-apply">
+                  Apply
+                </button>
               </div>
             </div>
             <div class="subsubbtn">
               <button class="btn">Color balance</button>
               <div class="subsubbtn-group">
+                <p class="txt txt-first" id="red-value">
+                  Red: 0%
+                </p>
                 <input
                   type="range"
                   id="slider-color-red"
-                  class="sldr sldr-first"
+                  class="sldr"
+                  min="-2"
+                  max="2"
+                  value="0"
+                  step="0.01"
                 />
-                <input type="range" id="slider-color-green" class="sldr" />
+                <p class="txt" id="green-value">
+                  Green: 0%
+                </p>
+                <input
+                  type="range"
+                  id="slider-color-green"
+                  class="sldr"
+                  min="-2"
+                  max="2"
+                  value="0"
+                  step="0.01"
+                />
+                <p class="txt" id="blue-value">
+                  Blue: 0%
+                </p>
                 <input
                   type="range"
                   id="slider-color-blue"
-                  class="sldr sldr-last"
+                  class="sldr sldr"
+                  min="-2"
+                  max="2"
+                  value="0"
+                  step="0.01"
                 />
+                <button class="btn btn-last" id="button-color-apply">
+                  Apply
+                </button>
               </div>
             </div>
             <div class="subsubbtn">
               <button class="btn btn-last">Threshold</button>
               <div class="subsubbtn-group">
+                <p class="txt txt-first" id="threshold-value">
+                  Threshold level: 128
+                </p>
                 <input
                   type="range"
                   id="slider-threshold"
-                  class="sldr sldr-first sldr-last"
+                  class="sldr"
+                  min="1"
+                  max="255"
+                  value="128"
                 />
+                <button class="btn btn-last" id="button-threshold-apply">
+                  Apply
+                </button>
               </div>
             </div>
           </div>
