--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <main>
       <div class="btn-container">
         <div class="subbtn">
-          <button class="btn btn-first">Pixel Processing</button>
-          <div class="subbtn-group subbtn-group-first">
-            <button class="btn btn-first" id="button-grayscale">
+          <button class="btn first">Pixel Processing</button>
+          <div class="subbtn-group first">
+            <button class="btn first" id="button-grayscale">
               Grayscale
             </button>
             <button class="btn" id="button-negative">Negative</button>
             <div class="subsubbtn">
               <button class="btn">Gamma correction</button>
               <div class="subsubbtn-group">
-                <p class="txt txt-first" id="gamma-value">𝛾 = 1.00</p>
+                <p class="txt first" id="gamma-value">𝛾 = 1.00</p>
                 <input
                   type="range"
                   id="slider-gamma"
@@ -31,7 +31,7 @@
                   step="0.01"
                   value="1.00"
                 />
-                <button class="btn btn-last" id="button-gamma-apply">
+                <button class="btn last" id="button-gamma-apply">
                   Apply
                 </button>
               </div>
@@ -39,7 +39,7 @@
             <div class="subsubbtn">
               <button class="btn">Color balance</button>
               <div class="subsubbtn-group">
-                <p class="txt txt-first" id="red-value">Red: 0%</p>
+                <p class="txt first" id="red-value">Red: 0%</p>
                 <input
                   type="range"
                   id="slider-color-red"
@@ -69,15 +69,15 @@
                   value="0"
                   step="0.01"
                 />
-                <button class="btn btn-last" id="button-color-apply">
+                <button class="btn last" id="button-color-apply">
                   Apply
                 </button>
               </div>
             </div>
             <div class="subsubbtn">
-              <button class="btn btn-last">Threshold</button>
+              <button class="btn last">Threshold</button>
               <div class="subsubbtn-group">
-                <p class="txt txt-first" id="threshold-value">
+                <p class="txt first" id="threshold-value">
                   Threshold level: 128
                 </p>
                 <input
@@ -88,7 +88,7 @@
                   max="255"
                   value="128"
                 />
-                <button class="btn btn-last" id="button-threshold-apply">
+                <button class="btn last" id="button-threshold-apply">
                   Apply
                 </button>
               </div>
@@ -98,13 +98,13 @@
         <div class="subbtn">
           <button class="btn">Kernel Processing</button>
           <div class="subbtn-group">
-            <button class="btn btn-first" id="button-box-blur">Box blur</button>
+            <button class="btn first" id="button-box-blur">Box blur</button>
             <button class="btn" id="button-gaussian-blur">Gaussian blur</button>
             <button class="btn" id="button-sharpen">Sharpen</button>
             <button class="btn" id="button-sobel-operator">
               Sobel operator
             </button>
-            <button class="btn btn-last" id="button-laplacian-operator">
+            <button class="btn last" id="button-laplacian-operator">
               Laplacian operator
             </button>
           </div>
@@ -112,13 +112,16 @@
         <div class="subbtn">
           <button class="btn">Filters</button>
           <div class="subbtn-group">
-            <button class="btn btn-first" id="button-median-filter">
+            <button class="btn first" id="button-median-filter">
               Median filter
             </button>
-            <button class="btn btn-last" id="button-merge">Merge</button>
+            <label class="file-upload last" id="merge-uploader">
+              <input type="file" accept="image/*" id="merge-upload"/>
+              <p class="file-upload-txt">Merge</p>
+            </label>
           </div>
         </div>
-        <button class="btn btn-reset btn-last" id="button-reset">Reset</button>
+        <button class="btn btn-reset last" id="button-reset">Reset</button>
       </div>
       <div class="canvas-container">
         <canvas id="canvas" class="hidden"></canvas>
