--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="subsubbtn">
-              <button class="btn last">Threshold</button>
+              <button class="btn">Threshold</button>
               <div class="subsubbtn-group">
                 <p class="txt first" id="threshold-value">
                   Threshold level: 128
@@ -89,6 +89,18 @@
                   value="128"
                 />
                 <button class="btn last" id="button-threshold-apply">
+                  Apply
+                </button>
+              </div>
+            </div>
+            <div class="subsubbtn">
+              <button class="btn last">Image part</button>
+              <div class="subsubbtn-group">
+                <input type="number" class="input first" id="image-part-x1" placeholder="x1: 0px">
+                <input type="number" class="input" id="image-part-y1" placeholder="y1: 0px">
+                <input type="number" class="input" id="image-part-x2" placeholder="x2: 0px">
+                <input type="number" class="input last" id="image-part-y2" placeholder="y2: 0px">
+                <button class="btn last" id="button-part-apply">
                   Apply
                 </button>
               </div>
